--- a/lib/sros.pm.in
+++ b/lib/sros.pm.in
@@ -350,6 +350,8 @@ TOP: while (<$INPUT>) {
 	last if (/^$prompt/);
 	next if (/^(\s*$cmd\s*)$/);
 	next if (/^\s+\^$/);
+        next if (/^(\w{3}) (\w{3})\s+(\d{1,2}) (\d{2}:\d{2}:\d{2}) (\w+) (\d{4})$/);
+	
 	return(-1) if (/error: invalid parameter/i);
 	return(-1) if (/minor: cli command not allowed for this user/i);
 	# context lines
